# financeiro-app

./: .editorconfig  .gitignore  CONTRIBUTING.md  FinanceiroApp.sln  LICENSE  README.md  SECURITY.md  package.json  packages.config  pnpm-lock.yaml  swagger.json
.github/: changelog-config.json
.github/workflows/: ci.yml
Financeiro.API/: Financeiro.API.csproj  Financeiro.API.http  Program.cs  appsettings.Development.json  appsettings.example.json
Financeiro.API/Controllers/: BackupController.cs  BankAccountsController.cs  BanksController.cs  CategoriesController.cs  DescriptionMappingsController.cs  DriveInfoController.cs  FinancialGoalsController.cs  ScheduledTransactionsController.cs  TransactionsController.cs
Financeiro.API/DTOs/: BankDTOs.cs  DashboardDTOs.cs  DescriptionMappingDto.cs  FinancialGoalDto.cs  ImportTransactionDto.cs  ScheduledTransactionDto.cs  TransactionDto.cs
Financeiro.API/Models/: GoogleAuthRequest.cs
Financeiro.API/Properties/: launchSettings.json
FinanceiroApp.Core/: Class1.cs  FinanceiroApp.Core.csproj
FinanceiroApp.Core/Entities/: Bank.cs  (+9 more)
FinanceiroApp.FrontEnd/: FinanceiroApp.FrontEnd.esproj  angular.json  karma.conf.js  package.json  pnpm-lock.yaml  tsconfig.json
FinanceiroApp.Tests/: BalanceCalculationTests.cs  FinanceiroApp.Tests.csproj
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
docs/: GIT_FLOW.md  api-documentation.md  database-schema.dbml  frontend-documentation.md
scripts/: generate-icons.js  rename-binary.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+181 files in other folders)
